<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.AlbumDetailFragment">

    <ScrollView
        android:id="@+id/album_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linear_layout_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/album_detail_title" />-->

            <ImageView
                android:id="@+id/album_cover"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/album_detail_name" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2"
                android:shrinkColumns="0,1,2"
                android:layout_marginBottom="16dp">
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/album_detail_name" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/album_detail_release_date" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/album_detail_genre" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/album_detail_record_label" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/record_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>

            </TableLayout>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/album_detail_record_songs"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/album_detail_record_no_songs"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/track_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/album_detail_record_comments"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/album_detail_record_no_comments"
                android:visibility="gone" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/comment_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="AristiDevs" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:contentDescription="@string/add_track"
        app:tint="@color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        android:tooltipText="@string/add_track"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/comment_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/teal_700"
        android:contentDescription="@string/add_comment"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_comment"
        android:tooltipText="@string/add_comment"/>



</FrameLayout>