<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlbumNewFragment">

   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.AlbumNewFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/labelTextNew" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:autofillHints="@string/album_new_fragment_autofillHints_name"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/album_new_fragment_autofillHints_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvCover"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cover"
                    style="@style/labelTextNew" />

                <EditText
                    android:id="@+id/etCoverUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:hint="@string/album_new_fragment_autofillHints_cover"
                    android:autofillHints="@string/album_new_fragment_autofillHints_cover"
                    android:inputType="textUri"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/releaseDate"
                    style="@style/labelTextNew" />

                <EditText
                    android:id="@+id/etReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:autofillHints="@string/album_new_fragment_autofillHints_release_date"
                    android:hint="@string/album_new_fragment_autofillHints_release_date"
                    android:inputType="date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvDescription"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    style="@style/labelTextNew" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:autofillHints="@string/album_new_fragment_autofillHints_description"
                    android:hint="@string/album_new_fragment_autofillHints_description"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvGenre"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    style="@style/labelTextNew" />

                <Spinner
                    android:id="@+id/spinnerGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/tvRecordLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recordLabel"
                    style="@style/labelTextNew" />

                <Spinner
                    android:id="@+id/spinnerRecordLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="167dp"
                android:layout_height="45dp"
                android:text="@string/create"
                android:layout_gravity="center_horizontal"
                style="@style/ButtonRounded" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
