<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumFragment">
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.example.vinyls_equipo_16.ui.AlbumFragment"
        android:label="@string/album_title"
        tools:layout="@layout/album_fragment" >
        <action
            android:id="@+id/action_albumFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
        <action
            android:id="@+id/action_albumFragment_to_albumNewFragment"
            app:destination="@id/albumNewFragment" />
    </fragment>
    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.example.vinyls_equipo_16.ui.AlbumDetailFragment"
        android:label="@string/album_detail_title"
        tools:layout="@layout/album_detail_fragment" >
...
